# pydata

./: .gitignore  README.md  license  pyproject.toml
notebooks/: ipums.ipynb  papers.ipynb
src/: main.py  test.py
src/pydata/census/ipums/: reader.py
src/pydata/fed/fred/: reader.py
src/pydata/papers/agello/: main.ipynb
src/pydata/papers/gurkaynak/: main.ipynb  main.py
src/pydata/papers/shiller/: main.ipynb  main.py
