[tool.poetry]
name = "pydata"
version = "0.0.1"
description = "Datacenter of econ data"
authors = ["Marc de la Barrera <marc.delabarrera@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/marcdelabarrera/pydata"
packages = [{ include = "pydata", from = "src" }]

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
requests = "*"
ipumspy = "^0.7.0"
ipykernel = "^7.1.0"
pandas = "^2.3.3"
beautifulsoup4 = "^4.14.2"
lxml = "^6.0.2"

[tool.poetry.group.dev.dependencies]


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
