[tool.poetry]
name = "pydata"
version = "0.0.1"
description = "Datacenter of econ data"
authors = ["Marc de la Barrera <marc.delabarrera@gmail.com>"]
readme = "README.md"
license = "LICENSE"
homepage = "https://github.com/marcdelabarrera/pydata"
packages = [
    { include = "pydata", from = "src" }
]

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
xlrd = "^2.0.2"
ipykernel = "^7.1.0"
pandas = "^2.3.3"
matplotlib = "^3.10.7"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"